--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Survey Form</title>
+    <style>
+      body {
+          background-image: url(2123573.jpg);
+          background-size: contain;
+          background-attachment: fixed;
+          font-family: "Poppins", sans-serif;
+          }
+    </style>
     <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body class="bg-gray-100 min-h-screen flex items-center justify-center p-4">
@@ -135,3 +143,4 @@
     </div>
   </body>
 </html>
+
